Added guide, lo4j lib and minor changes